[gd_scene load_steps=3 format=2]

[ext_resource path="res://InventoryItem.gd" type="Script" id=1]
[ext_resource path="res://assets/items/sword.png" type="Texture" id=2]

[node name="InventoryItem" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="Popup"]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="gui_input" from="." to="." method="_on_InventoryItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_InventoryItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InventoryItem_mouse_exited"]
